--- a/pages/TeamSearch/style.css
+++ b/pages/TeamSearch/style.css
@@ -5,11 +5,12 @@ body {
 }
 
 .teamsearch-nav {
-  padding: 0 2em 0 0;
+  padding: 0.5em 2em;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: clamp(50px, 10vh, 70px);
+  box-shadow: 0px 0px 10px 0px #ddd;
 }
 
 .teamsearch-logo {
@@ -50,21 +51,48 @@ body {
   justify-content: space-between;
   align-items: center;
   box-sizing: content-box;
+  position: relative;
+  flex-grow: 1;
 }
 
-.teamseach-filter {
+.teamsearch-filter {
+  cursor: pointer;
+  position: absolute;
+  left: 10%;
+}
+
+.teamsearch-category {
+  border-bottom: 1px solid black;
+  width: 80px;
+  position: relative;
+}
+
+.teamsearch-category span {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.teamsearch-filterList {
+  list-style: none;
+  padding: 0;
+  opacity: 0;
+  height: 0px;
+  transition: opacity 0.3s ease, height 0.3s ease;
+  overflow: hidden;
+  display: block;
+}
+
+.teamsearch-filterList li {
+  border-bottom: 1px solid #ddd;
   width: 100%;
-  text-align: left;
-  height: 30px;
-  border: 1px solid red;
-  margin: 1em 0;
 }
 
 .teamsearch-cubeContainer {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 4em;
+  gap: 3em;
+  height: 100%;
 }
 
 .teamsearch-cube {
@@ -73,8 +101,18 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 10px;
-  width: 100%;
+  gap: 3px;
+  width: max-content;
+}
+
+.teamsearch-cube:first-child,
+.teamsearch-cube:nth-child(2) {
+  align-self: end;
+}
+
+.teamsearch-cube:last-child,
+.teamsearch-cube:nth-child(3) {
+  align-self: start;
 }
 
 .cube-item {
@@ -82,7 +120,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: clamp(180px, 18vh, 300px);
+  width: clamp(150px, 14vh, 200px);
   position: relative;
 }
 
@@ -101,11 +139,11 @@ body {
   object-fit: cover;
   filter: brightness(0.8);
   transition: all 0.5s ease;
+  border-radius: 10px;
 }
 
 .cube-item img:hover {
   filter: brightness(1);
-  transform: scale(1.05);
 }
 
 .cube-item-info {
@@ -121,8 +159,4 @@ body {
 .cube-item:hover .cube-item-info {
   opacity: 1;
   visibility: visible;
-}
-
-.cube-item:hover .cube-item-name {
-  transform: scale(1.05);
 }
