style: Redesign About page section

--- a/pages/TeamBase/style.css
+++ b/pages/TeamBase/style.css
@@ -13,9 +13,9 @@
 
   font-size: 1.5rem;
   color: white;
-  background-color: rgba(0, 0, 0, 0.5); /* 배경 추가 시 가독성 */
+  /*background-color: rgba(0, 0, 0, 0.5);*/
   padding: 5px 12px;
-  border-radius: 8px;
+  /*border-radius: 8px;*/
 }
 
 .team-name h2 {
@@ -33,28 +33,32 @@
   height: 100%;
   object-fit: cover;
   object-position: top; /* 위쪽을 기준으로 정렬 */
+
+  border-radius: 40px;
 }
 
 .hashtag {
   display: inline-block;
   font-size: 1rem;
   font-weight: 700;
-  background-color: #f2f2f2;
-
   padding: 6px 12px;
-  border-radius: 20px;
   white-space: nowrap;
+
+  /*
+  background-color: #f2f2f2;
+  border-radius: 20px;
   transition: background-color 0.3s;
+  */
 }
 
 .hashtag a {
   text-decoration: none;
-  color: #333;
+  color: white;
 }
 
 .hashtag:hover {
-  background-color: #e0e0e0;
   cursor: default;
+  transform: scale(1.2);
 }
 
 @media screen and (max-width: 48rem) {
@@ -63,35 +67,18 @@
   }
 }
 
-.interview-box {
-  background-color: #fff;
-
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  margin-bottom: 1.5rem;
-  transition: transform 0.3s ease;
-}
 .interview-question {
   font-weight: bold;
-  font-size: 1.2rem;
-  color: #333;
+  color: white;
   margin-bottom: 0.5rem;
-  position: relative;
-}
-
-.interview-question::before {
-  content: "💬";
-  margin-right: 0.5rem;
 }
 
 .interview-answer {
-  background-color: #f8f9fa;
+  border: 1px solid white;
   border-radius: 6px;
   padding: 1rem;
-  color: #555;
-  border-left: 4px solid #6c757d;
+  color: white;
   font-style: italic;
-  position: relative;
 }
 
 .dot-nav {
@@ -108,16 +95,16 @@
 .dot {
   width: 12px;
   height: 12px;
-  border: 2px solid #555;
+  border: 2px solid white;
   border-radius: 50%;
-  background-color: white;
+
   transition: all 0.3s;
   cursor: pointer;
 }
 
 .dot.active {
   transform: scale(1.6);
-  background-color: #555;
+  background-color: white;
 }
 
 .tooltip-wrapper {
