--- a/pages/TeamSearch/style.css
+++ b/pages/TeamSearch/style.css
@@ -204,5 +204,14 @@
   box-shadow: 0px 0px 5px 1px #ddd;
 }
 
+@media (min-width: 2560px) {
+  .teamsearch-filter {
+    top: 3%;
+  }
+  .teamsearch-cubeContainer {
+    margin: 5em 0;
+  }
+}
+
 @media screen and (max-width: 430px) {
 }
