--- a/pages/TeamBase/style.css
+++ b/pages/TeamBase/style.css
@@ -131,7 +131,7 @@
 .member-box {
   display: flex;
   gap: 1em;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .member-img-box {
@@ -146,11 +146,22 @@
   object-fit: contain;
 }
 
+/* 오른쪽 영역 공통 패딩 */
+.member-body {
+  padding: 2.5em 2em;
+}
+
+/* 이름 스타일(기본 margin 제거 + 컬러 맞춤) */
+.member-name {
+  position: relative;
+  right: 3px;
+  margin-bottom: 15px;
+  color: #fff;
+}
+
 .member-info {
-  align-self: flex-start;
   border-radius: 4px;
   color: whitesmoke;
-  padding: 2em;
 }
 
 @media (max-width: 767.98px) {
@@ -213,9 +224,10 @@
   justify-content: center; /* 좌우 중앙 */
   align-items: center; /* 상하 중앙 */
   text-align: left;
-  background-color: #ddd;
+  background-color: black;
+  border: 2px solid #da70d6;
   border-radius: 5px;
-  color: black;
+  color: white;
   font-size: 1.2em;
   line-height: 1.5em;
   padding: 1em 1.5em;
@@ -236,7 +248,7 @@
 }
 
 .carrer-img {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   border-radius: 5px;
   cursor: pointer;
   display: flex;
