style: mobile container

--- a/pages/TeamSearch/style.css
+++ b/pages/TeamSearch/style.css
@@ -252,7 +252,7 @@
   .teamsearch-container {
     background-image: none;
     background-color: black;
-    height: 100%;
+    flex: 1;
   }
   .teamsearch-cubeContainer {
     display: flex;
